[gd_scene load_steps=11 format=3 uid="uid://bag6e3hes514s"]

[ext_resource type="Texture2D" uid="uid://c7b2b2m1xhga6" path="res://asset/prolog/room.jpg" id="1_5mtp1"]
[ext_resource type="Script" path="res://script/prolog.gd" id="1_tvl5k"]
[ext_resource type="Texture2D" uid="uid://b2vmjo1nbrupw" path="res://asset/Ludzik/ludzik.baza.png" id="2_lrdgb"]
[ext_resource type="Texture2D" uid="uid://bnjmjukt177bg" path="res://asset/Ludzik/ludzik.eyes closed.png" id="3_6xvms"]
[ext_resource type="PackedScene" uid="uid://c2s2ubnl46htu" path="res://Sceny/Q2/chat.tscn" id="4_hxnrm"]
[ext_resource type="Texture2D" uid="uid://caklof0cjf5ho" path="res://asset/items/timeslipdevice.png" id="5_plcvq"]
[ext_resource type="Texture2D" uid="uid://c048p3r8dk7i2" path="res://asset/prolog/szuflada_closed.png" id="7_0jyfv"]
[ext_resource type="Texture2D" uid="uid://tvjmrcqp67vv" path="res://asset/environment/portal1.png" id="8_41xf3"]
[ext_resource type="Texture2D" uid="uid://chpwfcv58p0ea" path="res://asset/items/book.png" id="9_4k5d3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ns5f6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lrdgb")
}, {
"duration": 1.0,
"texture": ExtResource("3_6xvms")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[node name="Sprite2D" type="Node2D"]
script = ExtResource("1_tvl5k")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(643, 360.75)
scale = Vector2(4.31333, 3.20563)
texture = ExtResource("1_5mtp1")

[node name="portal" type="Sprite2D" parent="."]
visible = false
position = Vector2(250, 351)
scale = Vector2(2, 2)
texture = ExtResource("8_41xf3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(945, 470)
sprite_frames = SubResource("SpriteFrames_ns5f6")
animation = &"idle"

[node name="chat" parent="." instance=ExtResource("4_hxnrm")]
visible = false
position = Vector2(922, 179)
scale = Vector2(1, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
offset_left = 662.0
offset_top = 392.0
offset_right = 884.0
offset_bottom = 611.0
texture_normal = ExtResource("5_plcvq")

[node name="szuflada" type="TextureButton" parent="."]
visible = false
offset_left = 441.0
offset_top = 497.0
offset_right = 899.0
offset_bottom = 815.0
texture_normal = ExtResource("7_0jyfv")

[node name="Book" type="Sprite2D" parent="."]
position = Vector2(492, 467)
texture = ExtResource("9_4k5d3")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="button_down" from="szuflada" to="." method="_on_szuflada_button_down"]
